Adição de imagens para tela de alunos

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,3 +20,7 @@ flutter:
 
   assets:
     - assets/images/performance_logo.png
+    - assets/images/iconeAlunos.png
+    - assets/images/iconeFinanceiro.png
+    - assets/images/iconeFuncionario.png
+    - assets/images/exemploLogo.png
