adição da tela de início + assets + development

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,8 @@ flutter:
     - assets/images/iconeFinanceiro.png
     - assets/images/iconeFuncionario.png
     - assets/images/exemploLogo.png
+    - assets/images/icone_alunos.png
+    - assets/images/icone_financeiro.png
+    - assets/images/icone_funcionarios.png
+    - assets/images/exemplo_logo.png
+
